@@ -8,6 +8,7 @@ Changes in version 0.6.5
 - Fixed bug where order of JCalibration returned vector did not maintain
   order in file. Zero padding guarantees ordering up to 9999 values.
 - Added ClearAssociatedObjects method to JObject
+- Added facility to manage 64bit status word with each event
 
 Changes in version 0.6.4
 
